# drain3

./: .gitignore  AUTORESEARCH_PROMPT.md  Cargo.toml  README.md  REPORT.md  progress.jsonl  progress_plot.html  results.md
.github/workflows/: ci.yml  publish.yml  sanitize.yml
benches/: drain3_bench.rs
src/: cluster.rs  dict.rs  lib.rs  prefilter.rs  tokenizer.rs  tree.rs
tests/: integration_tests.rs
