[package]
name = "drain3"
version = "0.1.4"
edition = "2021"
authors = ["Akshat Agarwal <hey@akshat.dev>"]
description = "Fast log template extraction via fixed-depth prefix trees (Rust port of logpai/Drain3)"
license = "Apache-2.0"
repository = "https://github.com/akshatagarwl/drain3"
keywords = ["log", "parsing", "template", "drain", "clustering"]
categories = ["algorithms", "text-processing"]

[dependencies]
bon = "3.9.1"
fastrand = "2.4.1"
snafu = "0.8"
string-interner = { version = "0.15", features = ["backends"] }
smallvec = "1.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "drain3_bench"
harness = false
