[package]
name = "drain3"
version = "0.3.0"
edition = "2021"
authors = ["Akshat Agarwal <hey@akshat.dev>"]
description = "Fast log template extraction via fixed-depth prefix trees (Rust port of logpai/Drain3)"
license = "Apache-2.0"
repository = "https://github.com/akshatagarwl/drain3"
keywords = ["log", "parsing", "template", "drain", "clustering"]
categories = ["algorithms", "text-processing"]

[dependencies]
bon = "3.9.1"
fastrand = "2.4.1"
regex = "1"
snafu = "0.8"
string-interner = { version = "0.15", features = ["backends"] }
smallvec = "1.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
zenbench = { version = "0.1", features = ["criterion-compat"] }

[features]
zenbench = []

[[bench]]
name = "drain3_bench"
harness = false
